--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html lang="">
 	<head>
-		<title>Dr Stephen R Taylor</title>
+		<title>Sanika Khadkikar</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Dr Stephen R Taylor</a></h1>
+					<h1 id="logo"><a href="index.html">Sanika Khadkikar</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -205,7 +205,7 @@
 							   class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Stephen R Taylor (2019). All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Sanika Khadkikar (2019). All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							<br>Bio image: Michele Vallisneri (2018)
 							<br>Banner image: "Interstellar", &copy;Paramount Pictures
 							<br>Gravitational wave graphic: Artwork by Sandbox Studio, Chicago with Corinne Mucha
