--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Dr  Stephen  R  Taylor</h2>
-							<p>Assistant Professor at Vanderbilt University<br />
+							<h2>Sanika Khadkikar</h2>
+							<p>Graduate Student at Pennsylvania State University<br />
 							Gravitational Wave Astrophysicist<br />
-							Chair, NANOGrav Collaboration
 						</p>
 						<ul class="actions special">
 							<li><a href="images/Stephen_Taylor_CV_Sep2023.pdf" class="button">Download Curriculum Vitae PDF</a></li>
