--- a/elements.html
+++ b/elements.html
@@ -37,7 +37,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Resources</h2>
-							<p>Under construction...</p>
+							<p>BLOG!</p>
 						</header>
 
 						<!-- Text -->
@@ -396,16 +396,16 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="http://linkedin.com/in/stephen-taylor-a8164787"
+						<li><a href="https://www.linkedin.com/in/sanikakhadkikar"
 							   class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<!-- <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
-						<li><a href="http://www.github.com/stevertaylor"
+						<li><a href="http://www.github.com/sanikakhadkikar"
 							   class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="mailto:stephen.r.taylor@vanderbilt.edu"
+						<li><a href="mailto:sanika@psu.edu"
 							   class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Stephen R Taylor (2019). All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Sanika Khadkikar (2024). All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							<br>Image crdit: ...
 					</ul>
 				</footer>
