--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Dr Stephen R Taylor</a></h1>
+					<h1 id="logo"><a href="index.html"> Sanika Khadkikar</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -53,11 +53,12 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="http://linkedin.com/in/stephen-taylor-a8164787"
+						<li><a href="https://www.linkedin.com/in/sanikakhadkikar"
 							   class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="http://www.github.com/stevertaylor"
+						<!-- <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
+						<li><a href="http://www.github.com/sanikakhadkikar"
 							   class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="mailto:stephen.r.taylor@vanderbilt.edu"
+						<li><a href="mailto:sanika@psu.edu"
 							   class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
