--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
 							<p>Graduate Student at Pennsylvania State University<br />
 							Gravitational Wave Astrophysicist<br />
 						</p>
+						<!--
 						<ul class="actions special">
 							<li><a href="images/Stephen_Taylor_CV_Sep2023.pdf" class="button">Download Curriculum Vitae PDF</a></li>
 						</ul>
+						-->
 						</header>
 						<span class="image"><img src="images/bio_pic.jpg" alt="" /></span>
 					</div>
@@ -77,27 +79,20 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>The highly relativistic dynamics of systems of massive compact
-									objects like neutron stars and black holes can create ripples in
-									the fabric of spacetime. These ripples are <b>gravitational waves</b>, a
-									prediction of Einstein's 1915 General Theory of Relativity. A
-									prediction that is now fact.
-									<br>
-									Gravitational waves are a window onto the warped side of the Universe,
-										allowing us to glimpse <b>Black Holes</b> and test fundamental physics.
+									<p> Merging compact object binaries generate ripples in the fabric of spacetime,
+									stretching and squeezing it as they move. These ripples, known as gravitational
+									waves, can be detected by ground-based detectors from distances of thousands of
+									megaparsecs. By analyzing these gravitational waves, we gain valuable insights
+									into the fundamental workings of the universe.
 									</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>The orbital decay of the <b>binary pulsar B1913+16</b> was the
-									first evidence for gravitational radiation. Almost
-									a quarter of a century later, Kip Thorne, Rai Weiss, and Barry
-									Barish won the Nobel Prize for their work on <b>LIGO</b> (the Laser Interferometer
-									Gravitational Wave Observatory), which made its first detection of a
-									binary black hole merger in 2015. Announced on June 29, 2023, <b>NANOGrav</b> 
-									and other pulsar timing array
-									collaborations found exciting evidence for a cosmic background of 
-									nanohertz-frequency gravitational waves. I had the honor of announcing this news
-									at National Science Foundation headquarters.</p>
+									<p> Neutron stars are among the densest objects in the universe. Despite observing
+									hundreds of them, their internal structure remains largely unknown. The physics at
+									these supranuclear densities is an amalgamation quantum and gravitational theories.
+									My research focuses on extracting information about neutron star properties from
+									gravitational wave signals, aiming to enhance our understanding of these fascinating
+									objects!/p>
 
 								</div>
 							</div>
