--- a/index.html
+++ b/index.html
@@ -86,15 +86,6 @@
 									into the fundamental workings of the universe.
 									</p>
 								</div>
-								<div class="col-4 col-12-medium">
-									<p> Neutron stars are among the densest objects in the universe. Despite observing
-									hundreds of them, their internal structure remains largely unknown. The physics at
-									these supranuclear densities is an amalgamation quantum and gravitational theories.
-									My research focuses on extracting information about neutron star properties from
-									gravitational wave signals, aiming to enhance our understanding of these fascinating
-									objects!/p>
-
-								</div>
 							</div>
 						</div>
 					</div>
@@ -106,22 +97,19 @@
 					<span class="image fit main"><img src="images/smbhb.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Hunting for Massive Binary Black Holes</h2>
-							<p>Titans of Relativistic physics</p>
+							<h2>Neutron Star Structure</h2>
 						</header>
-						<p>These black holes are formed in the cataclysmic merger of galaxies.
-							<b>My research</b> is shedding new light on the properties, environments, and histories
-						of massive black hole mergers. Observing these needs a gravitational-wave detector
-							in space (<b>LISA</b>, the Laser Interferometer Space Antenna, circa 2034),
-							or (for the truly supermassive ones) a network of pulsars spread throughout
-							the Milky Way that can be timed to extraordinary precision
-							(a PTA, <b>Pulsar Timing Array</b>, online now!).
-							</p>
+						<p> Neutron stars are among the densest objects in the universe. Despite observing
+						hundreds of them, their internal structure remains largely unknown. The physics at
+						these supranuclear densities is an amalgamation quantum and gravitational theories.
+						My research focuses on extracting information about neutron star properties from
+						gravitational wave signals, aiming to enhance our understanding of these fascinating
+						objects<!/p>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Three -->
+			<!-- Three
 				<section id="three" class="spotlight style3 left">
 					<span class="image fit main bottom"><img src="images/psr.jpg" alt="" /></span>
 					<div class="content">
@@ -142,7 +130,7 @@
 			as Kip Thorne and Jocelyn Bell-Burnell.</p>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
-				</section>
+				</section>  -->
 
 			<!-- Four -->
 				<section id="four" class="wrapper style1 special fade-up">
