--- a/index.html
+++ b/index.html
@@ -67,27 +67,21 @@
 				</section>
 
 			<!-- One -->
-				<section id="one" class="spotlight style1 bottom">
+				<section id="one" class="spotlight style2 right">
 					<span class="image fit main"><img src="images/gws.jpg" alt="" /></span>
 					<div class="content">
-						<div class="container">
-							<div class="row">
-								<div class="col-4 col-12-medium">
-									<header>
-										<h2>Gravitational Waves</h2>
-										<p>The new frontier of astrophysics</p>
-									</header>
-								</div>
-								<div class="col-4 col-12-medium">
-									<p> Merging compact object binaries generate ripples in the fabric of spacetime,
-									stretching and squeezing it as they move. These ripples, known as gravitational
-									waves, can be detected by ground-based detectors from distances of thousands of
-									megaparsecs. By analyzing these gravitational waves, we gain valuable insights
-									into the fundamental workings of the universe.
-									</p>
-								</div>
-							</div>
-						</div>
+						<header>
+							<h2>Gravitational Waves</h2>
+							<p>The new frontier of astrophysics</p>
+						</header>
+					</div>
+					<div class="col-4 col-12-medium">
+						<p> Merging compact object binaries generate ripples in the fabric of spacetime,
+						stretching and squeezing it as they move. These ripples, known as gravitational
+						waves, can be detected by ground-based detectors from distances of thousands of
+						megaparsecs. By analyzing these gravitational waves, we gain valuable insights
+						into the fundamental workings of the universe.
+						</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</section>
@@ -109,31 +103,8 @@
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Three
-				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/psr.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>Pulsar Timing Arrays</h2>
-							<p>Hacking the Milky Way to forge a nanohertz gravitational wave detector</p>
-						</header>
-						<p>Some <b>pulsars</b> spin as fast as a kitchen blender, whipping beams of radiation
-						into our line of sight to be detected in our radio telescopes as a "pulse". These cosmic
-						lighthouses are incredibly stable. By tracking timing deviations, we haved searched, and found 
-						evidence for, the fingerprint of <b>nanohertz gravitational waves</b> that distort spacetime
-							between the pulsar and the Earth. These timing deviations are <b>correlated
-							across all pulsars in the Milky Way</b>, allowing us to sit at the center of a
-							vast detector web. I chaired NANOGrav's gravitational-wave detection working group
-						for several years. More recently, I co-led the analysis campaign that found first evidence
-					for nanohertz-frequency gravitational waves. At the beginning of 2023, I was elected as 
-				Chair of NANOGrav, and made the announcement of our evidence alongside several colleagues, as well
-			as Kip Thorne and Jocelyn Bell-Burnell.</p>
-					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
-				</section>  -->
-
-			<!-- Four -->
-				<section id="four" class="wrapper style1 special fade-up">
+			<!-- Three -->
+				<section id="three" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
 							<h2>About me</h2>
