--- a/index.html
+++ b/index.html
@@ -67,15 +67,13 @@
 				</section>
 
 			<!-- One -->
-				<section id="one" class="spotlight style2 right">
+				<section id="one" class="spotlight style2 left">
 					<span class="image fit main"><img src="images/gws.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Gravitational Waves</h2>
 							<p>The new frontier of astrophysics</p>
 						</header>
-					</div>
-					<div class="col-4 col-12-medium">
 						<p> Merging compact object binaries generate ripples in the fabric of spacetime,
 						stretching and squeezing it as they move. These ripples, known as gravitational
 						waves, can be detected by ground-based detectors from distances of thousands of
