--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/smbhb.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/bns.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Neutron Star Structure</h2>
