--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Three -->
+			<!-- Three
 				<section id="three" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
@@ -113,12 +113,12 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-user-graduate"></span>
 									<h3>Undergraduate</h3>
-									<p>MPhys Physics [1st Class] (2010) <br>Jesus College, University of Oxford</p>
+									<p>MSc Physics & B.E Mechanical Engineering BITS Pilani Hyderabad</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-university"></span>
 									<h3>Graduate</h3>
-									<p>PhD Astronomy (2014)<br>Institute of Astronomy, University of Cambridge</p>
+									<p> PhD Physics (on)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-space-shuttle"></span>
@@ -142,7 +142,7 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section> -->
 
 
 			<!-- Footer -->
@@ -157,11 +157,11 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Sanika Khadkikar (2019). All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							<br>Bio image: Michele Vallisneri (2018)
+							<!-- <br>Bio image: Michele Vallisneri (2018)
 							<br>Banner image: "Interstellar", &copy;Paramount Pictures
 							<br>Gravitational wave graphic: Artwork by Sandbox Studio, Chicago with Corinne Mucha
 							<br>Black hole graphic: LSC/Sonoma State University/Aurore Simonnet
-							<br>Pulsar graphic: B. Saxton, NRAO/AUI/NSF
+							<br>Pulsar graphic: B. Saxton, NRAO/AUI/NSF -->
 					</ul>
 				</footer>
 
