--- a/index.html
+++ b/index.html
@@ -55,13 +55,9 @@
 							<p>Graduate Student at Pennsylvania State University<br />
 							Gravitational Wave Astrophysicist<br />
 						</p>
-						<!--
-						<ul class="actions special">
-							<li><a href="images/Stephen_Taylor_CV_Sep2023.pdf" class="button">Download Curriculum Vitae PDF</a></li>
-						</ul>
-						-->
+
 						</header>
-						<span class="image"><img src="images/bio_pic.jpg" alt="" /></span>
+						<span class="image"><img src="images/sanika_pic.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
