--- a/resources.html
+++ b/resources.html
@@ -19,7 +19,7 @@
 
 			<!-- Header -->
 				<header id="header">
-				<h1 id="logo"><a href="index.html">Dr Stephen R Taylor</a></h1>
+				<h1 id="logo"><a href="index.html">Sanika Khadkikarr</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -35,7 +35,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Resources</h2>
-							<p>Under construction...</p>
+							<p>BLOG!!!</p>
 						</header>
 					</div>
 				</div>
