--- a/cv.html
+++ b/cv.html
@@ -41,7 +41,7 @@
 					<!-- One -->
 					<section id="content">
 						<span style="display:block;text-align:center;">
-						<embed src="images/Stephen_Taylor_CV_Sep2023.pdf" width="900px" height="1000px" />
+						<!-- <embed src="images/Stephen_Taylor_CV_Sep2023.pdf" width="900px" height="1000px" /> -->
 						<!--</span> -->
 					</section>
 
