--- a/resources.html
+++ b/resources.html
@@ -52,7 +52,7 @@
 							   class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Stephen R Taylor (2019). All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Sanika Khadkikar (2024). All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							<br>Image crdit: ...
 					</ul>
 				</footer>
