--- a/cv.html
+++ b/cv.html
@@ -38,12 +38,12 @@
 							<!-- <p>A list of my scientific publications and citation counts</p> -->
 						</header>
 
-					<!-- One -->
+					<!-- One 
 					<section id="content">
 						<span style="display:block;text-align:center;">
 						<!-- <embed src="images/Stephen_Taylor_CV_Sep2023.pdf" width="900px" height="1000px" /> -->
 						<!--</span> -->
-					</section>
+					</section> -->
 
 					</div>
 				</div>
