--- a/research.html
+++ b/research.html
@@ -37,7 +37,7 @@
 						</header>
 						<div class="row gtr-150">
 							<div class="col-4 col-12-medium">
-
+						<!--
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
@@ -235,7 +235,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 			<!-- Footer -->
 				<footer id="footer">
