--- a/resources.html
+++ b/resources.html
@@ -35,7 +35,8 @@
 					<div class="container">
 						<header class="major">
 							<h2>Resources</h2>
-							<p>BLOG!!!</p>
+							<h3>Rapid Parameter Estimation</h3>
+							<p>1. Reduced Order Quadrature</p>
 						</header>
 					</div>
 				</div>
