--- a/resources.html
+++ b/resources.html
@@ -36,7 +36,7 @@
 						<header class="major">
 							<h2>Resources</h2>
 							<h3>Rapid Parameter Estimation</h3>
-							<p>1. <li><a href="roq.html"> Reduced Order Quadrature</a> </li></p>
+							<li><a href="roq.html"> Reduced Order Quadrature</a> </li>
 						</header>
 					</div>
 				</div>
