--- a/roq.html
+++ b/roq.html
@@ -34,9 +34,8 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Resources</h2>
-							<h3>Rapid Parameter Estimation (ROQ)</h3>
-							$$ \Lambda $$
+							<h2>Rapid Parameter Estimation (ROQ)</h2>
+							<p>$$ \Lambda $$ </p>
 						</header>
 					</div>
 				</div>
