--- a/cv.html
+++ b/cv.html
@@ -38,7 +38,7 @@
 							<!-- <p>A list of my scientific publications and citation counts</p> -->
 						</header>
 
-					<-- One 
+					<-- One -->
 					<section id="content">
 						<span style="display:block;text-align:center;">
 						<-- <embed src="SK_CV-2024.pdf" width="900px" height="1000px" /> -->
