--- a/cv.html
+++ b/cv.html
@@ -30,7 +30,7 @@
 					</nav>
 				</header>
 
-			<-- Main -->
+			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
@@ -38,11 +38,11 @@
 							<!-- <p>A list of my scientific publications and citation counts</p> -->
 						</header>
 
-					<-- One -->
+					<!-- One -->
 					<section id="content">
 						<span style="display:block;text-align:center;">
 						<-- <embed src="SK_CV-2024.pdf" width="900px" height="1000px" /> -->
-						<--</span> -->
+						<!--</span> -->
 					</section> -->
 
 					</div>
