--- a/index.html
+++ b/index.html
@@ -143,20 +143,16 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="http://linkedin.com/in/stephen-taylor-a8164787"
+						<li><a href="https://www.linkedin.com/in/sanikakhadkikar"
 							   class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="http://www.github.com/stevertaylor"
+						<!-- <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
+						<li><a href="http://www.github.com/sanikakhadkikar"
 							   class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="mailto:stephen.r.taylor@vanderbilt.edu"
+						<li><a href="mailto:sanika@psu.edu"
 							   class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Sanika Khadkikar (2019). All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							<!-- <br>Bio image: Michele Vallisneri (2018)
-							<br>Banner image: "Interstellar", &copy;Paramount Pictures
-							<br>Gravitational wave graphic: Artwork by Sandbox Studio, Chicago with Corinne Mucha
-							<br>Black hole graphic: LSC/Sonoma State University/Aurore Simonnet
-							<br>Pulsar graphic: B. Saxton, NRAO/AUI/NSF -->
+						<li>&copy; Sanika Khadkikar (2024). All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
