--- a/cv.html
+++ b/cv.html
@@ -41,7 +41,7 @@
 					<!-- One -->
 					<section id="content">
 						<span style="display:block;text-align:center;">
-						<-- <embed src="SK_CV-2024.pdf" width="900px" height="1000px" /> -->
+						<-- <embed src="Sanika_Resume_Feb2025.pdf" width="900px" height="1000px" /> -->
 						<!--</span> -->
 					</section> -->
 
