--- a/roq.html
+++ b/roq.html
@@ -13,6 +13,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script>
+			window.MathJax = {
+				tex: {
+					inlineMath: [['$', '$'], ['\\(', '\\)']],
+					displayMath: [['$$', '$$'], ['\\[', '\\]']]
+				},
+				svg: {
+					fontCache: 'global'
+				}
+			};
+		</script>
+<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js" async></script>
+
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -35,7 +48,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Rapid Parameter Estimation (ROQ)</h2>
-							<p>$$ \Lambda $$ </p>
+							<p>$$ \Lambda $$</p>
 						</header>
 					</div>
 				</div>
