--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 									</li>
 								</ul>
 							</li> -->
-							<li><a href="research.html">Research</a></li>
+							<li><a href="about_me.html">About Me</a></li>
 							<li><a href="cv.html">CV</a></li>
 							<li><a href="resources.html">Resources</a></li>
 							<!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
