--- a/about_me.html
+++ b/about_me.html
@@ -33,10 +33,31 @@
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
-						<header class="major">
-							<h2>About Me</h2>
-						</header>
+					  <header class="major">
+					    <h2>About Me</h2>
+					  </header>
+					
+					  <section class="about-me">
+					    <span class="image left">
+					      <img src="images/sanika.jpg" alt="Sanika Khadkikar" />
+					    </span>
+					    <p>
+						   I'm Sanika (pronounced Saa-nee-kah) from Mulund, a small suburb in Mumbai, India. While I'm deeply passionate about physics, I've always had a strong love for the performing arts. I've been acting, singing, dancing, and telling stories since kindergarten. In fact, my high school teachers were convinced I would end up in theatre or Toastmasters International.
+					    </p>
+					    <p>
+						    Eventually, I chose to study science because nothing excites me more than pursuing the unknown, and physics gives me a way to explore it. I completed an integrated bachelor's in Mechanical Engineering and a master's in Physics from BITS Pilani in India. During that time, I developed a deep fascination with neutron stars and decided to pursue a PhD at Penn State to study them more closely.
+					     </p>
+
+					    <p>
+						    At Penn State, I'm exploring the many facets of neutron stars. From using gravitational waves to infer their properties in binary mergers to studying how exotic forms of matter might exist inside them, I approach neutron stars from multiple angles. My goal is to incrementally deepen our understanding of their equation of state.
+					    </p>
+
+					    <p>
+						    If you're curious about my research, feel free to check out my CV in the sidebar. And if you're interested in my thoughts and ramblings on different corners of gravitational physics, head over to the Resources section!
+					    </p>
+					  </section>
 					</div>
+
 				</div>
 
 			<!-- Footer -->
