--- a/about_me.html
+++ b/about_me.html
@@ -39,7 +39,7 @@
 					
 					  <section class="about-me">
 					    <span class="image left">
-					      <img src="images/sanika.jpg" alt="Sanika Khadkikar" />
+					      <img src="sanika.jpg" alt="Sanika Khadkikar" />
 					    </span>
 					    <p>
 						   I'm Sanika (pronounced Saa-nee-kah) from Mulund, a small suburb in Mumbai, India. While I'm deeply passionate about physics, I've always had a strong love for the performing arts. I've been acting, singing, dancing, and telling stories since kindergarten. In fact, my high school teachers were convinced I would end up in theatre or Toastmasters International.
