--- a/cv.html
+++ b/cv.html
@@ -23,7 +23,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="research.html">Research</a></li>
+							<li><a href="about_me.html">About Me</a></li>
 							<li><a href="cv.html">CV</a></li>
 							<li><a href="resources.html">Resources</a></li>
 						</ul>
