--- a/elements.html
+++ b/elements.html
@@ -23,10 +23,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="research.html">Research</a></li>
-						<li><a href="publications.html">Publications</a></li>
+						<li><a href="about_me.html">About Me</a></li>
 						<li><a href="resources.html">Resources</a></li>
-						<li><a href="jobopportunities.html">Job Opportunities</a></li>
 					</ul>
 				</nav>
 			</header>
