--- a/resources.html
+++ b/resources.html
@@ -35,8 +35,8 @@
 					<div class="container">
 						<header class="major">
 							<h2>Resources</h2>
-							<h3>Rapid Parameter Estimation</h3>
-							<li><a href="roq.html"> Reduced Order Quadrature</a> </li>
+							<h3>Gravitational Wave Physics</h3>
+							<li><a href="ligo.html"> The Genius of LIGO’s Design</a> </li>
 						</header>
 					</div>
 				</div>
