--- a/about_me.html
+++ b/about_me.html
@@ -42,7 +42,7 @@
 					      <img src="sanika.jpg" alt="Sanika Khadkikar" />
 					    </span>
 					    <p>
-						   I'm Sanika (pronounced Saa-nee-kah) from Mulund, a small suburb in Mumbai, India. While I'm deeply passionate about physics, I've always had a strong love for the performing arts. I've been acting, singing, dancing, and telling stories since kindergarten. In fact, my high school teachers were convinced I would end up in theatre or Toastmasters International.
+						   I'm Sanika (pronounced Saa-nee-kah) from Mulund, a small suburb in Mumbai, India. While I'm deeply passionate about physics, I've always had a strong love for the performing arts. I've been acting, singing, dancing, and telling stories since kindergarten. In fact, my high school teachers were convinced I would end up pursuing theatre arts.
 					    </p>
 					    <p>
 						    Eventually, I chose to study science because nothing excites me more than pursuing the unknown, and physics gives me a way to explore it. I completed an integrated bachelor's in Mechanical Engineering and a master's in Physics from BITS Pilani in India. During that time, I developed a deep fascination with neutron stars and decided to pursue a PhD at Penn State to study them more closely.
