--- a/resources.html
+++ b/resources.html
@@ -37,6 +37,7 @@
 							<h2>Resources</h2>
 							<h3>Gravitational Wave Physics</h3>
 							<li><a href="ligo.html"> The Genius of LIGO’s Design</a> </li>
+							<li><a href="eccentricity.html"> Why care about eccentricities? </a> </li>
 						</header>
 					</div>
 				</div>
