--- a/eccentricity.html
+++ b/eccentricity.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <header class="major">
                     <h2>Eccentricities in Gravitational Wave Binaries</h2>
-                    <p>Sanika Samir Khadkikar — May 2025</p>
+                    <p>Sanika Khadkikar — May 2025</p>
                 </header>
 
                 <section>
