--- a/resources.html
+++ b/resources.html
@@ -38,6 +38,7 @@
 							<h3>Gravitational Wave Physics</h3>
 							<li><a href="ligo.html"> The Genius of LIGO’s Design</a> </li>
 							<li><a href="eccentricity.html"> Why care about eccentricities? </a> </li>
+							<li><a href="quadrupole.html"> The Enigma of Gravitational Radiation </a> </li>
 						</header>
 					</div>
 				</div>
